# telegram2foam

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  message_template.md  note_template.md  pyproject.toml
